update-manager (1:0.93.20) unstable; urgency=low

  * DistUpgrade/DistUpgradeGettext.py:
    - translated the empty "" into "" (the qt frontend
      may call this on empty strings in translate_widget)

 --

update-manager (1:0.93.19) intrepid; urgency=low

  * UpdateManager/Core/MetaRelease.py:
    - fix crash in CDROM upgrade  (LP: #276363)
  * DistUpgrade/DistUpgradeQuirks.py:
    - fix crash in nvidia handling (thanks to 
      Spencer Janssen)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 02 Oct 2008 11:26:30 +0200

update-manager (1:0.93.18) intrepid; urgency=low

  * DistUpgrade/DistUpgrade.cfg:
    - add KeepInstalled rule for adept to help
      the dependency resolver (thanks to MvG)
    - add kubuntu-kde4-desktop metapackage so that
      the meta package detection works for kde4 (LP: #274706)
  * DistUpgrade/DistUpgradeCache.py:
    - fix log for kept packages
    - make the log of the obsolete removal less verbose
    - fix kubuntu-kde4-desktop upgrades (LP: #274706)
  * DistUpgrade/ReleaseAnnouncement:
    - udpated for BETA
  * DistUpgrade/DistUpgradeViewGtk.py:
    - fix typo and unfuzzy translations. Thanks to Brian Murray
      for the patch, LP: #272726)
  * UpdateManager/UpdateManager.py:
    - add gconf key /apps/update-manager/show_versions to show
      version information (disabled by default, LP: #189406)
  * DistUpgrade/DistUpgradeQuirks.py:
    - add intrepidPreUpgrade() handler that detects
      fglrx in xorg.conf and warns about it before the upgrade 
    - consolidate the various quirks into this file
    - add check for the nvidia-glx-71 and nvidia-glx-96 drivers 
      and warn if they will be required
  * DistUpgrade/xorg_fix_intrepid.py:
    - add script that is run after the upgrade that ensures that
      the xorg.conf file gets transitioned to a free driver if
      the proprietary one does not work for intrepid
    - transition from fglrx and nvidia-glx-{71,96} to the free
      driver (LP: #274303)
  