@@ -3,6 +3,9 @@ update-manager (1:0.93.20) unstable; urgency=low
   * DistUpgrade/DistUpgradeGettext.py:
     - translated the empty "" into "" (the qt frontend
       may call this on empty strings in translate_widget)
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - make sure to write a final newline in /etc/fstab
+      when adding the relatime option (LP: #279093)
 
  --
 
